filter/sort menu font-sizing adjusted. Alignment issues at md/sm sizes for pricing repaired. providence coloring made more readable when filters not active

--- a/_universals.scss
+++ b/_universals.scss
@@ -222,7 +222,7 @@ $tokenFifth: #6f7ca8;
       cursor: pointer;
       display: inline-block;
       border: 1px solid $lighterOpacity;
-      font: 700 13px/1.3 'Open Sans', 'Arial', sans-serif;
+      font: 700 14px/1.3 'Open Sans', 'Arial', sans-serif;
       margin: 0;
       outline: none;
       padding: 3px $mainGutter/2.5 3px $mainGutter/2;
@@ -255,7 +255,7 @@ $tokenFifth: #6f7ca8;
       -webkit-padding-start: 0;
       -moz-padding-start: 0;
       background: white;
-      font-size: 13px;
+      font-size: 14px;
       line-height:1.2;
       padding: $mainGutter/2 0;
       position: absolute;
@@ -306,8 +306,8 @@ $tokenFifth: #6f7ca8;
       position: relative;
       }
     .webkite-sort-area + .webkite-filter-area{
-      padding-left: 78px;
-      margin-left: -65px;
+      padding-left: 82px;
+      margin-left: -69px;
       }
     .webkite-applied-filters{
       position: relative; 
@@ -351,7 +351,7 @@ $tokenFifth: #6f7ca8;
       @if $colorVariant == dark{border: 1px solid $lighterOpacity;} 
       @if $colorVariant == light{background-clip: padding-box;} 
       color: $lightOpacity;
-      font: 700 13px/1 'Open Sans', 'Arial', sans-serif;
+      font: 700 14px/1 'Open Sans', 'Arial', sans-serif;
       padding: 3px 6px 3px $mainGutter/2;
       height: 28px;
       width:68px;
@@ -433,7 +433,7 @@ $tokenFifth: #6f7ca8;
       -webkit-padding-start: 0;
       -moz-padding-start: 0;
       background: white;
-      font-size: 13px;
+      font-size: 14px;
       padding: $mainGutter/2 0;
       position: absolute;
       z-index: 3;
